# Practice

./: langgraph_bot.ipynb
Python-assignments/Q3/: example.py  generate.py  removeduplicates.py
Python-assignments/Q4/: anonymize.py  anonymized_file.csv  data.csv
Python-assignments/anonymize-data/: anonymize.py
Python-assignments/remove-duplicates/: removeduplicates.py
React-assignments/to-do/: README.md  index.html  package.json
React-assignments/to-do/src/: App.css  App.jsx
React-assignments/to-do/src/components/: TaskInput.jsx  TaskItem.jsx  TaskList.jsx
React-assignments/user-todo/: README.md  index.html  package-lock.json  package.json
React-assignments/user-todo/src/: App.jsx  index.css
React-assignments/user-todo/src/components/: TodoList.jsx  UserCard.jsx  UserList.jsx
SQL-assignments/: 3rd highest salary.sql  dept-emp.sql
test-data-mcp-server/: .gitignore  README.md  main.py  pyproject.toml
test-data-mcp-server/data/: employee_data_2025-10-18_2133.json
