[project]
name = "test-data-mcp-server"
version = "0.1.0"
description = "MCP Server for generating synthetic test data across any domain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=25.0.0",
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
